--- a/MidTermNetCore/Views/MonHocs/Create.cshtml
+++ b/MidTermNetCore/Views/MonHocs/Create.cshtml
@@ -1,40 +1,40 @@
 ﻿@model MidTermNetCore.Models.MonHoc
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Tạo mới";
 }
 
-<h1>Create</h1>
+<h1>Tạo mới</h1>
 
-<h4>MonHoc</h4>
+<h4>Môn học</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="TenMon" class="control-label"></label>
+                <label asp-for="TenMon" class="control-label">Tên Môn</label>
                 <input asp-for="TenMon" class="form-control" />
                 <span asp-validation-for="TenMon" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SoTinChi" class="control-label"></label>
+                <label asp-for="SoTinChi" class="control-label">Số tín chỉ</label>
                 <input asp-for="SoTinChi" class="form-control" />
                 <span asp-validation-for="SoTinChi" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="MaKhoa" class="control-label"></label>
+                <label asp-for="MaKhoa" class="control-label">Khoa</label>
                 <select asp-for="MaKhoa" class ="form-control" asp-items="ViewBag.MaKhoa"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Tạo mới" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Trở về danh sách</a>
 </div>
 
 @section Scripts {
