--- a/MidTermNetCore/Views/MonHocs/Delete.cshtml
+++ b/MidTermNetCore/Views/MonHocs/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model MidTermNetCore.Models.MonHoc
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Xóa";
 }
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Bạn có muốn xóa môn học này?</h3>
 <div>
     <h4>MonHoc</h4>
     <hr />
@@ -33,7 +33,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="MaMon" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Xóa" class="btn btn-danger" /> |
+        <a asp-action="Index">Trở về danh sách</a>
     </form>
 </div>
