--- a/MidTermNetCore/Views/MonHocs/Details.cshtml
+++ b/MidTermNetCore/Views/MonHocs/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model MidTermNetCore.Models.MonHoc
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Chi tiết";
 }
 
-<h1>Details</h1>
+<h1>Chi tiết</h1>
 
 <div>
-    <h4>MonHoc</h4>
+    <h4>Môn học</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -31,6 +31,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.MaMon">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.MaMon">Sửa</a> |
+    <a asp-action="Index">Trở về danh sách</a>
 </div>
