--- a/MidTermNetCore/Views/MonHocs/Index.cshtml
+++ b/MidTermNetCore/Views/MonHocs/Index.cshtml
@@ -1,25 +1,25 @@
 ﻿@model IEnumerable<MidTermNetCore.Models.MonHoc>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Trang chủ";
 }
 
-<h1>Index</h1>
+<h1>Trang chủ</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Tạo mới</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.TenMon)
+                Tên Môn
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SoTinChi)
+               Số tín chỉ
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.KhoaNavigation)
+                Khoa
             </th>
             <th></th>
         </tr>
@@ -37,9 +37,9 @@
                 @Html.DisplayFor(modelItem => item.KhoaNavigation.TenKhoa)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.MaMon">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.MaMon">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.MaMon">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.MaMon">Sửa</a> |
+                <a asp-action="Details" asp-route-id="@item.MaMon">Chi tiết</a> |
+                <a asp-action="Delete" asp-route-id="@item.MaMon">Xóa</a>
             </td>
         </tr>
 }
