--- a/MidTermNetCore/Views/SinhVien/Delete.cshtml
+++ b/MidTermNetCore/Views/SinhVien/Delete.cshtml
@@ -4,36 +4,34 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Bạn có chắc chắn muốn xóa sinh viên này không ?</h3>
 <div>
-    <h4>SinhVien</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HoTen)
+            Họ tên
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HoTen)
+            @Model.HoTen
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NgaySinh)
+            Ngày sinh
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NgaySinh)
+            @Model.NgaySinh.ToString("dd-MM-yyyy")
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DienThoai)
+            Số điện thoại
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DienThoai)
+            @Model.DienThoai
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="MaSV" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Xóa" class="btn btn-danger" /> |
+        <a asp-action="Index">Trở về</a>
     </form>
 </div>
