--- a/MidTermNetCore/Views/MonHocs/Details.cshtml
+++ b/MidTermNetCore/Views/MonHocs/Details.cshtml
@@ -11,19 +11,19 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TenMon)
+            Tên Môn Học
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.TenMon)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SoTinChi)
+           Số Tín Chỉ
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.SoTinChi)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.KhoaNavigation)
+           Khoa
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.KhoaNavigation.TenKhoa)
