--- a/MidTermNetCore/Views/Shared/_Layout.cshtml
+++ b/MidTermNetCore/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="MonHocs" asp-action="Index">Môn Học</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="SinhVien" asp-action="Index">Sinh Viên</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SinhViens" asp-action="Index">Sinh Viên</a>
                         </li>
                     </ul>
                 </div>
