--- a/MidTermNetCore/Views/SinhViens/Delete.cshtml
+++ b/MidTermNetCore/Views/SinhViens/Delete.cshtml
@@ -1,36 +1,36 @@
 ﻿@model MidTermNetCore.Models.SinhVien
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Xóa";
 }
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Bạn có muốn xóa sinh viên?</h3>
 <div>
-    <h4>SinhVien</h4>
+    <h4>Sinh Viên</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HoTen)
+            Họ tên
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.HoTen)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NgaySinh)
+            Ngày sinh
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.NgaySinh)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DienThoai)
+            Điện thoại
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.DienThoai)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.KhoaNavigation)
+            Khoa
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.KhoaNavigation.TenKhoa)
@@ -39,7 +39,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="MaSV" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Xóa" class="btn btn-danger" /> |
+        <a asp-action="Index">Trở về danh sách</a>
     </form>
 </div>
