--- a/MidTermNetCore/Views/SinhViens/Details.cshtml
+++ b/MidTermNetCore/Views/SinhViens/Details.cshtml
@@ -1,35 +1,35 @@
 ﻿@model MidTermNetCore.Models.SinhVien
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Chi tiết";
 }
 
-<h1>Details</h1>
+<h1>Chi tiết</h1>
 
 <div>
-    <h4>SinhVien</h4>
+    <h4>Sinh viên</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HoTen)
+            Họ tên
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.HoTen)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NgaySinh)
+            Ngày Sinh
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.NgaySinh)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DienThoai)
+            Điện thoại
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.DienThoai)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.KhoaNavigation)
+            Khoa
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.KhoaNavigation.TenKhoa)
@@ -37,6 +37,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.MaSV">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.MaSV">Sửa</a> |
+    <a asp-action="Index">Trở về danh sách</a>
 </div>
