--- a/MidTermNetCore/Views/SinhVien/Index.cshtml
+++ b/MidTermNetCore/Views/SinhVien/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@model IEnumerable<MidTermNetCore.Models.SinhVien>
-
-@{
+﻿@{
     ViewData["Title"] = "Trang Chủ Sinh Viên";
 }
 
@@ -39,7 +37,8 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.MaSV">Sửa</a> |
                 <a asp-action="Details" asp-route-id="@item.MaSV">Chi Tiết</a> |
-                <a asp-action="Delete" asp-route-id="@item.MaSV">Xóa</a>
+                <a asp-action="Delete" asp-route-id="@item.MaSV">Xóa</a> |
+                <a asp-action="Point" asp-route-id="@item.MaSV">Điểm</a>
             </td>
         </tr>
 }
